# github-copilot-agentic-workflow-test

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: discovery-agent.md  documentation-agent.md
docs/: README.md
src/: __init__.py  calculator.py
tests/: test_calculator.py
